/* Words */
"accept" = "Accept";
"cancel" = "Cancel";
"warning" = "Warning";
"error" = "ERROR";
"errOccur" = "An error has occurred.";
"wait_a_sec" = "Just wait a moment…";
"importing" = "Importing";
...
"loading_phase_autoplay" = "Loading autoplay…";
"loading_phase_audio" = "Loading audio…";
"download" = "Download";
"downloadWaiting" = "Download Waiting";
"downloading" = "Downloading";
"downloaded" = "Downloaded";
"success" = "Success";
"failed" = "Failed";
"delete" = "Delete";
"add_bookmark" = "Bookmark";
"remove_bookmark" = "Remove Bookmark";
"edit" = "Edit";
"update" = "Update";
...
"reconnect_launchpad" = "Reconnect Launchpad";
"import_unipack" = "Import UniPack";
"store" = "Store";

/* Setting */
"setting" = "Settings";
"information" = "Information";
"select_theme" = "Select Theme";
"storage_location" = "Storage Location";
"github" = "Github";
"openSourceLicense" = "Open Source License";
"FCMToken" = "FCM Token";
"tap_to_copy" = "Tap to copy";
...
"unipackNotFound" = "UniPack not found.";

/* Guide */
"guide_download_new" = "Download new packs";
"guide_import_external" = "Import downloaded packs";
"guide_restore_packs" = "Recover missing packs";
"main_empty_title" = "Play your first UniPack";
"main_empty_step_get_pack" = "Get a pack: tap **Download new packs** to use the Store, or **Import downloaded packs** for a .zip you already have.";
"main_empty_step_play" = "Tap the pack in the list, then tap **Play**.";
"main_empty_step_no_launchpad" = "No Launchpad? Just tap the pads on screen.";
"main_empty_guide_link" = "Getting started guide";
"unipack_play" = "Play";

/* Launchpad */
"launchpadConnecting" = "Connecting launchpad…";
"midiDevicesNotDetected" = "MIDI Devices Not Detected";
"midi_open_panel" = "Open";
"midi_connected_banner %@" = "MIDI connected: %@";
...
